# university-projects

./: LICENSE  README.md
Bachelor degree/ERASMUS 1/Database/: Create Statement.txt  ER diagram.uml  ER diagram.~ml
Bachelor degree/ERASMUS 2/Games Programming/: readme.md
Bachelor degree/Laboratorio di Intelligenza Artificiale/: README.md
Bachelor degree/Laboratorio di Intelligenza Artificiale/homework1_wrapper/: Makefile  README.md  orazio_wrapper.cpp  orazio_wrapper.h  orazio_wrapper_test.cpp
Bachelor degree/Laboratorio di Intelligenza Artificiale/homework2_turtlesim/: CMakeLists.txt  README.md
Bachelor degree/Laboratorio di Intelligenza Artificiale/homework2_turtlesim/msg/: Circle.msg  CircleArray.msg
Bachelor degree/Laboratorio di Intelligenza Artificiale/homework2_turtlesim/src/turtlesim/: __init__.py
Bachelor degree/Laboratorio di Intelligenza Artificiale/homework2_turtlesim/srv/: GetCircles.srv  RemoveCircle.srv  Spawn.srv  SpawnCircle.srv
Bachelor degree/Laboratorio di Intelligenza Artificiale/homework2_turtlesim/tutorials/: get_circles_client.cpp  remove_circle_client.cpp  spawn_circle_client.cpp  spawn_circle_server.cpp
Bachelor degree/Laboratorio di Intelligenza Artificiale/homework3_navigation/: README.md  hw3_map.yaml
Bachelor degree/Laboratorio di Intelligenza Artificiale/homework4_edge_extractor/: CMakeLists.txt  README.md  package.xml
Bachelor degree/Laboratorio di Intelligenza Artificiale/homework5_machine_learning/: homework5.ipynb
Bachelor degree/Laboratorio di Intelligenza Artificiale/homework6_actionlib/: README.md
Bachelor degree/Sistemi di Calcolo/Code/: 10 - MyFree.c  12 - File archivio.c  7 - Shell.c  8 - Copia di file.c  9 - Indicatore di progresso.c  P12.2 - Misurazione tempo processi.c  P12.3 - Misurazione tempi accessi a disco.c  P7 - x in array_ con fork.c  P8.1 - Somma word di un file.c  P8.2 - File casuale.c  P8.3 - Somma file ottimizzata.c  P8.4 - Uguaglianza di file.c  P9 - Fork, wait, segnali.c
Master degree/Autonomous and Mobile Robotics/: CarTrailerPlanning.cpp  Makefile  README.md
Master degree/Autonomous and Mobile Robotics/solution_to_video/: draw_tree.py  requirements.txt  solution_to_video.py
Master degree/Autonomous and Mobile Robotics/statistics/: statistics.ipynb
Master degree/Computer Graphics/HW1/: readme.html  readme.md
Master degree/Computer Graphics/HW2/: readme.html  readme.md
Master degree/Computer Graphics/HW3/: readme.html  readme.md
Master degree/Elective in AI 2/: README.md
Master degree/Elective in AI 2/pddl/: classification_problem.pddl  classify_domain.pddl  easy_problem.pddl  global_domain.pddl  global_problem.pddl  hard_problem.pddl  (+1 more)
Master degree/Natural Language Processing/: My NLP presentation.ppt
Master degree/Neural Networks/: NN presentation.ppt  README.md  generate_dataset.ipynb  preprocessing.ipynb  project.ipynb  test_split.txt  train_split.txt
Master degree/Planning and Reasoning/: P&R_Project.ipynb  P&R_Project_extension.ipynb  README.md
(+478 files in other folders)
